// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseLink component should render properly with classname 1`] = `
<BaseLink
  className="test-class"
  href="/test"
>
  <ForwardRef(LinkComponent)
    href="/test"
  >
    <span
      className="test-class text-black cursor-pointer hover:underline font-medium"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Test component
    </span>
  </ForwardRef(LinkComponent)>
</BaseLink>
`;

exports[`BaseLink component should render properly with default props 1`] = `
<BaseLink
  href="/test"
>
  <ForwardRef(LinkComponent)
    href="/test"
  >
    <span
      className=" text-black cursor-pointer hover:underline font-medium"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Test component
    </span>
  </ForwardRef(LinkComponent)>
</BaseLink>
`;
